--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,7 +1,17 @@
 // Override Bootstrap color system
 
-$teal: #64a19d;
-$black: #000000;
+$teal: #8CC1DB;//#64a19d;
+$black: #1E1E1C;//#000000;
+$white: #E8E6E3; //#fff
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #868e96;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
 
 // Override Bootstrap default state colors
 
