--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -1,3 +1,74 @@
-.footer {
-    padding: 5rem 0;
+.footer-dark {
+    padding: 50px 0;
+    color: $white;
+    background-color: $black;
+    h3 {
+        margin-top: 0;
+        margin-bottom: 0.75rem;
+        font-weight: bold;
+        font-size: 1rem;
+    }
+    ul {
+        padding: 0;
+        list-style: none;
+        line-height: 1.6;
+        font-size: 0.9rem;
+        margin-bottom: 0;
+    }
+    ul a {
+        color: inherit;
+        text-decoration: none;
+    }
+    .item.text {
+        margin-bottom: 2.25rem;
+    }
+    .item.text p {
+        opacity: 0.6;
+        margin-bottom: 0;
+    }
+    .item.social {
+        text-align: center;
+    }
+    .item.social > a {
+        font-size: 1.5rem;
+        width: 2.25rem;
+        height: 2.25rem;
+        line-height: 2.25rem;
+        display: inline-block;
+        text-align: center;
+        border: none;
+        // border-radius: 50%;
+        // box-shadow: 0 0 0 1px rgba(255,255,255,0.4);
+        margin: 0 0.5rem;
+        color: $white; //fade-out($white, 0.6);
+        &:hover {
+            color: $primary;
+        }
+    }
+    .copyright {
+        text-align: center;
+        padding-top: 1.25rem;
+        opacity: 0.3;
+        font-size: 0.8rem;
+        margin-bottom: 0;
+        color: $white;
+        opacity: 1;
+    }
+}
+@media (max-width:767px) {
+  .footer-dark .item:not(.social) {
+    text-align: center;
+    padding-bottom: 1.25rem;
+  }
+}
+@media (max-width:767px) {
+  .footer-dark .item.text {
+    margin-bottom: 0;
+  }
+}
+@media (max-width:991px) {
+  .footer-dark .item.social {
+    text-align: center;
+    margin-top: 1.25rem;
+  }
 }
