--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -6,26 +6,30 @@
     padding: 15rem 0;
     background: linear-gradient(
             to bottom,
-            #{fade-out($black, 0.7)} 0%,
-            #{fade-out($black, 0.3)} 75%,
+            #{fade-out($black, 0.9)} 0%,
+            #{fade-out($black, 0.25)} 80%,
             $black 100%
         ),
-        url("../assets/img/bg-masthead.jpg");
+        url('../assets/img/IMG_20180922_162555.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
+    i {
+        font-size: 1.5rem;
+        color: $white;
+    }
     h1 {
         font-family: $font-family-special;
         font-size: 2.5rem;
         line-height: 2.5rem;
         letter-spacing: 0.8rem;
-        background: linear-gradient(fade-out($white, 0.1), fade-out($white, 1));
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
+        // background: linear-gradient(fade-out($white, 0.1), fade-out($white, 1));
+        // -webkit-text-fill-color: transparent;
+        // background-clip: text;
     }
     h2 {
-        max-width: 20rem;
+        max-width: 30rem;
         font-size: 1rem;
     }
     @include media-breakpoint-up(md) {
@@ -43,7 +47,7 @@
             letter-spacing: 0.8rem;
         }
         h2 {
-            max-width: 30rem;
+            max-width: 50rem;
             font-size: 1.25rem;
         }
     }
