--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -1,6 +1,6 @@
 // Override Bootstrap typography variables
 
-$font-family-base: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI",
+$font-family-base: "Montserrat", "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
@@ -8,6 +8,6 @@ $base-letter-spacing: 0.0625em;
 
 // Custom font family for masthead H1
 
-$font-family-special: "Varela Round", -apple-system, BlinkMacSystemFont,
+$font-family-special: "Lato", "Varela Round", -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
